# statick

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt.bak  GUIDE.md  MANIFEST.in  README.md  black-error-parsing.diff  clang-format-compare-bug-new.diff  clang-format-compare-bug.diff  clang-format-compare-bug.patch  clean.sh  codecov.yml  genindex.html  index.html  install.txt  int-line-severity.diff  multiprocess-fork-only.diff  objects.inv  py-modindex.html  pyproject.toml  requirements-docs.txt  requirements.txt  ros-deps.txt  search.html  searchindex.js  setup.cfg  setup.py  statick  statick.diff  statick_gauntlet  statick_tool.html  statick_tool.plugins.discovery.html  statick_tool.plugins.html  statick_tool.plugins.reporting.html  statick_tool.plugins.tool.html  statick_ws  tox.ini
.cccc-CMakeCCompilerId.c/: cccc.db  cccc.html  cccc.xml  cccc_src.html
.cccc-CMakeCXXCompilerId.cpp/: cccc.db  cccc.html  cccc.xml  cccc_src.html
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/config/: .bash_prompt
.devcontainer/scripts/: dev.sh  postCreateCommand.sh  postCreateCommandUser.sh
.doctrees/: environment.pickle  index.doctree  statick_tool.doctree  statick_tool.plugins.discovery.doctree  statick_tool.plugins.doctree  statick_tool.plugins.reporting.doctree  statick_tool.plugins.tool.doctree
.github/workflows/: black.yaml  doc.yaml  publish.yaml  publish_docker_image.yaml  self_check.yaml  test.yml  unit_test.yaml
_modules/: index.html
_modules/statick_tool/: args.html  config.html  discovery_plugin.html  exceptions.html  issue.html  package.html  plugin_context.html  profile.html  resources.html  statick.html  tool_plugin.html
_sources/: statick_tool.plugins.discovery.rst.txt  statick_tool.plugins.reporting.rst.txt  statick_tool.plugins.tool.rst.txt  statick_tool.rst.txt
docker/: Dockerfile  requirements.txt
docs/: Makefile  qa-metrics.md
docs/source/: conf.py  index.rst  statick_tool.plugins.discovery.rst  statick_tool.plugins.reporting.rst  statick_tool.plugins.rst  statick_tool.plugins.tool.rst  statick_tool.rst
examples/: README.md
examples/navigation/: navigation_example1.bash  navigation_example2.bash  navigation_example3.bash  navigation_example4.bash  navigation_example5.bash
examples/sbpl/: sbpl_example1.bash
examples/werkzeug/: werkzeug_example1.bash
src/statick_md/: __init__.py
src/statick_tex/plugins/: __init__.py
src/statick_tool/: __init__.py  args.py  config.py  discovery_plugin.py  exceptions.py  issue.py  package.py  plugin_context.py  profile.py  reporting_plugin.py  resources.py  statick.py  statick_tool.py  timing.py  tool_plugin.py  tool_version.py
src/statick_tool/rsc/: .groovylintrc.json  .markdownlintrc  config.yaml  dockerfile-lint-profile.yaml  dockerfilelint-profile.yaml  documentation.yaml  eslint-profile.yaml  eslint.config.mjs  exceptions.yaml  gauntlet_ignore.yaml  hadolint-profile.yaml  htmllint-profile.yaml  jshint-profile.yaml  markdownlint-profile.yaml  md-config.yaml  md-profile.yaml  planning-config.yaml  planning-profile.yaml  profile.yaml  rst-profile.yaml  rstcheck-profile.yaml  rstlint-profile.yaml  stylelint-profile.yaml  tex-config.yaml  tex-profile.yaml  tooling-config.yaml  tooling-profile.yaml  web-config.yaml  web-profile.yaml  writegood-profile.yaml
src/statick_tooling/plugins/: __init__.py
src/statick_web/plugins/: __init__.py
statick_tool/: __init__.py  args.py  config.py  discovery_plugin.py  exceptions.py  gauntlet.py  issue.py  package.py  plugin_context.py  profile.py  report.py  reporting_plugin.py  resources.py  statick.py  timing.py  tool_plugin.py
statick_tool/plugins/: __init__.py
statick_tool/plugins/discovery/: __init__.py  c_discovery_plugin.py  catkin_discovery_plugin.py  catkin_discovery_plugin.yapsy-plugin  cmake_discovery_plugin.py  cmake_discovery_plugin.yapsy-plugin  groovy_discovery_plugin.py  groovy_discovery_plugin.yapsy-plugin  java_discovery_plugin.py  java_discovery_plugin.yapsy-plugin  maven_discovery_plugin.py  perl_discovery_plugin.py  perl_discovery_plugin.yapsy-plugin  python_discovery_plugin.py  python_discovery_plugin.yapsy-plugin  ros_discovery_plugin.py  shell_discovery_plugin.py  shell_discovery_plugin.yapsy-plugin  xml_discovery_plugin.py  xml_discovery_plugin.yapsy-plugin  yaml_discovery_plugin.py
statick_tool/plugins/reporting/: __init__.py  code_climate_reporting_plugin.py  do_nothing_reporting_plugin.py  do_nothing_reporting_plugin.yapsy-plugin  json_reporting_plugin.py  print_json_reporting_plugin.py  print_json_reporting_plugin.yapsy-plugin  print_to_console_reporting_plugin.py  write_file_reporting_plugin.py  (+5 more)
statick_tool/rsc/: .markdownlintrc  CMakeLists.txt.in  config-list.yaml  config.yaml  discovery_only.yaml  exceptions.yaml  findBugs-security.xml  profile.yaml  self_check.yaml  spotbugs-security.xml
templates/: Dockerfile  Jenkinsfile  README.md
tests/args/: test_args.py
tests/args/test2/: .keep
tests/chktex_tool_plugin/: test_chktex_tool_plugin.py
tests/config/: test_config.py
tests/discovery/: test_discovery_plugin.py
tests/exceptions/: early_exceptions.yaml  empty_exceptions.yaml  glob_exceptions.yaml  ignore_package_exceptions.yaml  ignore_package_none_exceptions.yaml  package_exceptions.yaml  test_exceptions.py  valid_exceptions.yaml
tests/lacheck_tool_plugin/: test_lacheck_tool_plugin.py
tests/pddl_discovery_plugin/: exceptions.yaml  test_pddl_discovery_plugin.py
tests/profile/: nodefault.yaml  profile-nopackage.yaml  test_profile.py
tests/reporting_plugin/: test_reporting_plugin.py
tests/resources/: test_resources.py
tests/statick/: test_statick.py
tests/statick_tool/: test_statick_tool.py
tests/tex_discovery_plugin/: test_tex_discovery_plugin.py
tests/timing/: test_timing.py
tests/tool_plugin/: test_tool_plugin.py
tests/tool_versions/: test_tool_versions.py
tests/val_parser_tool_plugin/: test_val_parser_tool_plugin.py
tests/val_tool_plugin/: test_val_tool_plugin.py
tests/val_validate_tool_plugin/: test_val_validate_tool_plugin.py
(+567 files in other folders)
