[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "statick"
authors = [{name = "NIWC Pacific"}]
description="Making code quality easier."
version = "0.9.4"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC0-1.0"}
classifiers = [
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "PyYAML",
    "bandit",
    "black",
    "cmakelint",
    "cpplint",
    "deprecated",
    "docformatter",
    "flawfinder",
    "isort",
    "lizard",
    "mypy",
    "pycodestyle",
    "pydocstyle",
    "pyflakes",
    "pylint",
    "ruff",
    "tabulate",
    "types-PyYAML",
    "types-deprecated",
    "types-setuptools",
    "types-tabulate",
    "xmltodict",
    "yamllint",
    "yapsy",
]

[project.scripts]
statick = "statick_tool.statick:main"

[tool.setuptools.package-data]
statick_tool = [
    "plugins/discovery/*.yapsy-plugin",
    "plugins/reporting/*.yapsy-plugin",
    "plugins/tool/*.yapsy-plugin",
    "rsc/*",
    "rsc/.*",
    "rsc/plugin_mapping/*",
]

[project.urls]
"Homepage" = "https://github.com/sscpac/statick"
"Bug Tracker" = "https://github.com/sscpac/statick/issues"

[project.optional-dependencies]
test = [
    "backports.tempfile",
    "flake8-pep3101",
    "flake8<5",  # Pin until https://github.com/tholo/pytest-flake8/issues/87 is fixed.
    "mock",
    "pycodestyle",
    "pydocstyle",
    "pylint-django",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-isort",
    "tox",
    "tox-gh-actions",
]
docs = [
    "sphinx==1.7.9",
    "travis-sphinx==2.2.1",
    "yaml-1.3",
    "yapsy",
]

[tool.isort]
profile = "black"
